fixing data-table header spacing for binocs

--- a/projects/novo-elements/src/elements/data-table/data-table.component.scss
+++ b/projects/novo-elements/src/elements/data-table/data-table.component.scss
@@ -270,7 +270,7 @@ cdk-table {
     }
   }
   &.button-header-cell {
-    min-width: 28px;
+    min-width: 40px;
     max-width: 40px;
   }
   &.dropdown-header-cell {
